--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="information">
                     <div class="info-box"><i class="bx bx-laptop"></i> <span>Musthofa Kamaluddin</span></div>
                     <div class="info-box"><i class="bx bxs-phone"></i> <span>+62 813-3172-0264</span></div>
-                    <div class="info-box"><i class="bx bxs-envelope"></i> <span><a href="mailto:lud.dev@yahoo.com.com">lud.dev@yahoo.com</a></span></div>
+                    <div class="info-box"><i class="bx bxs-envelope"></i> <span><a href="mailto:lud.dev@yahoo.com">lud.dev@yahoo.com</a></span></div>
                 </div>
                 <a href="https://github.com/ludgit" class="btn">Download Cv</a>
             </div>
