--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">Musthofa <span>Kamaluddin</span>.</a>
+        <a href="#" class="logo">Musthofa <span>Kamaluddin</span></a>
         <div class="bx bx-menu" id="menu-icon"></div>
         <ul class="navbar">
             <li><a href="#home">Home</a></li>
@@ -153,8 +153,8 @@
                 <a href="#">Learn More</a>
             </div>
             <div class="services-box">
-                <i class="bx bx-bookmark-heart"></i>
-                <h3>UI/UX Design</h3>
+                <i class="bx bx-bot"></i>
+                <h3>Bot WhatsApp</h3>
                 <a href='#'>Learn More</a>
             </div>
             <div class="services-box">
