--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
     <div class="footer">
         <h2>Follow Me</h2>
         <div class="footer-social">
-            <a href="#"><i class="bx bxl-facebook"></i></a> 
-            <a href="#"><i class="bx bxl-linkedin"></i></a> 
+            <!-- <a href="#"><i class="bx bxl-facebook"></i></a>  -->
+            <a href="https://www.linkedin.com/in/musthofa-kamaluddin-8338812a1/"><i class="bx bxl-linkedin"></i></a> 
             <a href="https://instagram.com/lud_dev"><i class="bx bxl-instagram"></i></a> 
             <a href="https://youtube.com/@lud_dev"><i class="bx bxl-youtube"></i></a>
             <a href="https://wa.me/6281331720264"><i class="bx bxl-whatsapp   "></i></a> 
