--- a/index.html
+++ b/index.html
@@ -147,21 +147,21 @@
                 <h3>Web Development</h3>
                 <a href="#">Learn More</a>
             </div>
-            <div class="services-box">
+            <!-- <div class="services-box">
                 <i class="bx bx-server"></i>
                 <h3>Backend Development</h3>
                 <a href="#">Learn More</a>
-            </div>
+            </div> -->
             <div class="services-box">
                 <i class="bx bx-bot"></i>
                 <h3>Bot WhatsApp</h3>
                 <a href='#'>Learn More</a>
             </div>
-            <div class="services-box">
+            <!-- <div class="services-box">
                 <i class="bx bxl-android"></i>
                 <h3>App Development</h3>
                 <a href="#">Learn More</a>
-            </div>
+            </div> -->
         </div>
     </section>
     <!-- <section class="contact" id="contact">
