--- a/bot.html
+++ b/bot.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.1.4/css/boxicons.min.css" rel="stylesheet" crossorigin="anonymous" integrity="sha512-cn16Qw8mzTBKpu08X0fwhTSv02kK/FojjNLz0bwp2xJ4H+yalwzXKFw/5cLzuBZCxGWIA+95X4skzvo8STNtSg==" referrerpolicy="no-referrer">
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/bot.css" rel="stylesheet">
     <title>Developer Musthofa Kamaluddin | Full-Stack Web/Application Developer</title>
     <style>
         #loader{
@@ -51,25 +51,25 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">Musthofa <span>Kamaluddin</span></a>
+        <a href="index.html" class="logo">Musthofa <span>Kamaluddin</span></a>
         <div class="bx bx-menu" id="menu-icon"></div>
         <ul class="navbar">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#services">Services</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html#about">About</a></li>
+            <li><a href="index.html#skills">Skills</a></li>
+            <li><a href="index.html#services">Services</a></li>
             <!-- <li><a href="#contact">Contact</a></li> -->
             <div class="bx bx-moon" id="darkmode"></div>
         </ul>
     </header>
-    <section class="home" id="home">
-        <div class="social">
+    <!-- <div class="social">
             <a href="https://github.com/ludgit" target="_blank" rel="noopener"><i class="bx bxl-github"></i></a>
             <a href="https://instagram.com/lud_dev" target="_blank" rel="noopener"><i class="bx bxl-instagram"></i></a>
             <a href="https://youtube.com/@lud_dev" target="_blank" rel="noopener"><i class="bx bxl-youtube"></i></a>
         </div>
         <div class="home-img">
-            <img alt="Image of Musthofa Kamaluddin" src="assets/img/main.jpg">
+            <img alt="Image of  <section class="home" id="home">
+       Musthofa Kamaluddin" src="assets/img/main.jpg">
         </div>
         <div class="home-text">
             <span>Hello, I'm</span>
@@ -78,28 +78,37 @@
             <p>I am a Web/Application developer, I have 1 years of experience in this sector. If you need to build a professional website, you can hire me! Please choose any of my services or plans.</p>
             <a href="https://github.com/ludgit" class="btn" target="_blank" rel="noopener">Download CV</a>
         </div>
-    </section>
+    </section> -->
     <section class="about" id="about">
         <div class="heading">
-            <h2>About Me</h2>
-            <span>Introduction</span>
+            <h2>Bot WhatsApp</h2>
+            <span>What is it?</span>
         </div>
         <div class="about-container">
             <div class="about-img">
-                <img alt="Image of Luddin" src="assets/img/main.jpg">
+                <img alt="Image of Bot" src="assets/img/mwnu.jpg">
             </div>
             <div class="about-text">
-                <p>Looking for a web developer to take your online presence to the next level? Look no further! With a strong passion for creating beautiful, functional websites, I am dedicated to delivering high-quality results that meet your unique needs and requirements. I understand the importance of having a website that not only looks great but is also optimized for search engines and provides a seamless user experience. Whether you're starting from scratch or need to upgrade your existing site, I will work closely with you to bring your vision to life. Let's bring your online goals to reality. Contact me now to get started!</p>
+                <p>This is a highly versatile WhatsApp bot with an extensive array of features, exceeding 200 in total. It is designed to assist users with a wide range of tasks, from media downloading and conversion to image/sticker creation, information retrieval, entertainment, and more.
+                    <br>
+                    <br>
+                    The bot's commands are organized into various categories, such as downloader, converter, maker, Islamic, games, fortune-telling, stalking, utilities, and others. It can download media from various sources like YouTube, Instagram, Twitter, and more. Additionally, it offers conversion capabilities for audio, video, and image formats, as well as the ability to create custom stickers and images with text overlays.
+                    <br>
+                    <br>
+                    Furthermore, the bot provides access to Islamic features like prayer times and Quran recitations, as well as entertaining options like games, jokes, and fortune-telling through the "Kerang Ajaib" (Magic Shell) feature. It can also stalk or retrieve information from various platforms like GitHub, Instagram, and others.
+                    <br>
+                    <br>
+                    This comprehensive WhatsApp bot is built using JavaScript, Node.js, Python, and Docker, leveraging their capabilities to provide a seamless and efficient user experience. By harnessing the power of these technologies, the bot delivers exceptional performance and reliability, making it a valuable tool for users seeking enhanced functionality through a convenient chat interface.<b</p>
                 <div class="information">
                     <div class="info-box"><i class="bx bx-laptop"></i> <span>Musthofa Kamaluddin</span></div>
                     <div class="info-box"><i class="bx bxs-phone"></i> <span>+62 813-3172-0264</span></div>
                     <div class="info-box"><i class="bx bxs-envelope"></i> <span><a href="mailto:lud.dev@yahoo.com">lud.dev@yahoo.com</a></span></div>
                 </div>
-                <a href="https://github.com/ludgit" class="btn" target="_blank" rel="noopener">Download Cv</a>
+                <a href="https://wa.me/6281331720264" class="btn" target="_blank" rel="noopener">Interested? Click Me!!</a>
             </div>
         </div>
     </section>
-    <section class="skills" id="skills">
+    <!-- <section class="skills" id="skills">
         <div class="heading">
             <h2>Skills</h2>
             <span>My Skills</span>
@@ -135,19 +144,19 @@
                 <img alt="Image of Musthofa Kamaluddin" src="assets/img/main.jpg">
             </div>
         </div>
-    </section>
+    </section> -->
     <section class="services" id="services">
         <div class="heading">
             <h2>Services</h2>
             <span>Our Services</span>
         </div>
         <div class="services-content">
-            <div class="services-box ">
+            <div class="services-box">
                 <i class="bx bx-code-alt blur"></i>
                 <h3 class="">Web Development</h3>
                 <!-- <p class="coming-soon">Coming Soon!</p> -->
                 <a href="#">Coming Soon!</a>
-        </div>
+            </div>
             <!-- <div class="services-box">
                 <i class="bx bx-server"></i>
                 <h3>Backend Development</h3>
@@ -156,7 +165,7 @@
             <div class="services-box">
                 <i class="bx bx-bot"></i>
                 <h3>Bot WhatsApp</h3>
-                <a href='bot.html'>Learn More</a>
+                <a href='#'>Learn More</a>
             </div>
             <!-- <div class="services-box">
                 <i class="bx bxl-android"></i>
