--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <h3>Backend Development</h3>
                 <a href="#">Learn More</a>
             </div> -->
-            <div class="services-box">
+            <div class="services-box" href="bot.html">
                 <i class="bx bx-bot"></i>
                 <h3>Bot WhatsApp</h3>
                 <a href='bot.html'>Learn More</a>
