--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <h1>Musthofa Kamaluddin</h1>
             <h2>Full Stack Web/Application Developer</h2>
             <p>I am a Web/Application developer, I have 1 years of experience in this sector. If you need to build a professional website, you can hire me! Please choose any of my services or plans.</p>
-            <a href="https://github.com/ludgit" class="btn" target="_blank" rel="noopener">Download CV</a>
+            <!-- <a href="https://github.com/ludgit" class="btn" target="_blank" rel="noopener">Download CV</a> -->
         </div>
     </section>
     <section class="about" id="about">
