--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
         </div>
         <div class="services-content">
             <div class="services-box ">
-                <i class="bx bx-code-alt blur"></i>
+                <i class="bx bx-code-alt"></i>
                 <h3 class="">Web Development</h3>
                 <!-- <p class="coming-soon">Coming Soon!</p> -->
-                <a href="#">Coming Soon!</a>
+                <a href="web.html">Learn More</a>
         </div>
             <!-- <div class="services-box">
                 <i class="bx bx-server"></i>
