--- a/web.html
+++ b/web.html
@@ -81,24 +81,15 @@
     </section> -->
     <section class="about" id="about">
         <div class="heading">
-            <h2>Bot WhatsApp</h2>
-            <span>What is it?</span>
+            <h2>Website Development</h2>
+            <span>What can I do?</span>
         </div>
         <div class="about-container">
             <div class="about-img">
-                <img alt="Image of Bot" src="assets/img/mwnu.jpg">
+                <img alt="Image of Bot" src="assets/img/main.jpg">
             </div>
             <div class="about-text">
-                <p>This is a highly versatile WhatsApp bot with an extensive array of features, exceeding 200 in total. It is designed to assist users with a wide range of tasks, from media downloading and conversion to image/sticker creation, information retrieval, entertainment, and more.
-                    <br>
-                    <br>
-                    The bot's commands are organized into various categories, such as downloader, converter, maker, Islamic, games, fortune-telling, stalking, utilities, and others. It can download media from various sources like YouTube, Instagram, Twitter, and more. Additionally, it offers conversion capabilities for audio, video, and image formats, as well as the ability to create custom stickers and images with text overlays.
-                    <br>
-                    <br>
-                    Furthermore, the bot provides access to Islamic features like prayer times and Quran recitations, as well as entertaining options like games, jokes, and fortune-telling through the "Kerang Ajaib" (Magic Shell) feature. It can also stalk or retrieve information from various platforms like GitHub, Instagram, and others.
-                    <br>
-                    <br>
-                    This comprehensive WhatsApp bot is built using JavaScript, Node.js, Python, and Docker, leveraging their capabilities to provide a seamless and efficient user experience. By harnessing the power of these technologies, the bot delivers exceptional performance and reliability, making it a valuable tool for users seeking enhanced functionality through a convenient chat interface.<b</p>
+                <p>I have no idea :( </p>
                 <div class="information">
                     <div class="info-box"><i class="bx bx-laptop"></i> <span>Musthofa Kamaluddin</span></div>
                     <div class="info-box"><i class="bx bxs-phone"></i> <span>+62 813-3172-0264</span></div>
@@ -152,10 +143,10 @@
         </div>
         <div class="services-content">
             <div class="services-box">
-                <i class="bx bx-code-alt blur"></i>
+                <i class="bx bx-code-alt"></i>
                 <h3 class="">Web Development</h3>
                 <!-- <p class="coming-soon">Coming Soon!</p> -->
-                <a href="#">Coming Soon!</a>
+                <a href="web.html">Learn More</a>
             </div>
             <!-- <div class="services-box">
                 <i class="bx bx-server"></i>
@@ -165,7 +156,7 @@
             <div class="services-box">
                 <i class="bx bx-bot"></i>
                 <h3>Bot WhatsApp</h3>
-                <a href='#'>Learn More</a>
+                <a href='bot.html'>Learn More</a>
             </div>
             <!-- <div class="services-box">
                 <i class="bx bxl-android"></i>
