--- a/web.html
+++ b/web.html
@@ -8,6 +8,7 @@
     <meta content="Developer Musthofa Kamaluddin" name="author">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width,initial-scale=1" name="viewport">
+    <link rel="icon" href="assets/img/main.jpg" type="image/x-icon">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.1.4/css/boxicons.min.css" rel="stylesheet" crossorigin="anonymous" integrity="sha512-cn16Qw8mzTBKpu08X0fwhTSv02kK/FojjNLz0bwp2xJ4H+yalwzXKFw/5cLzuBZCxGWIA+95X4skzvo8STNtSg==" referrerpolicy="no-referrer">
     <link href="assets/css/bot.css" rel="stylesheet">
     <title>Developer Musthofa Kamaluddin | Full-Stack Web/Application Developer</title>
